- Made setting of -qaohv etc on services (+S) not possible unless you are a netadmin (purpose
  is to prevent people from deoping BotServ bots). Suggested by shiny (#0000917)
- Ripped out fast (bad)words support out of spamfilter to avoid confusion, also renamed
  spamfilter::word to spamfilter::regex to make it even more clear (since we match
  on the whole line and have nothing to do with words.. 'word' doesn't make sense).
- Updated docs with some better regex examples, reported by AngryWolf (#0001520).
- Added snomasks 'S' (Spamfilter) which notifies you of any spamfilter matches.
- [internal] always return after spamfilter match, don't continue looping trough
  targets list (eg in case of: /msg #a,#b,#c spamspam), otherwise you would get
  duplicate notification msgs.
- Added SENDSNO server command, similar to SENDUMODE but for snomasks, this is
  used by the spamfilter snomask (+S) so you get network-wide notifications.
- Added "compiled for.." versioning system, this way a beta17 module can't be loaded
  on beta18, etc... People often forgot to recompile their modules or had old ones
  somewhere by mistake, therefore crashing after upgrades... this should fix this
  (in the future). Module coders don't have to do anything for making this work,
  it's done automatically (via modules.h).
- Forgot to add src/modules/m_sendsno.c to CVS, also fixed 2 compile warnings
  and a crashbug related to previous commit.. bug hunting will continue ;).
- Fixed minor compile warning.
- Added a section "Security tips/checklist" to unreal32docs.html, this is something
  I worked on a few months ago... It tries to explain how to get a server/network
  secured, what the potential risks are, etc... Of course security is a complex topic
  so I cannot talk about everything in it, but I tried to mention the main risks and
  what you can do about it in a (hopefully) simple and understandable language ;).
- Fixed a snomask bug reported by Cat / HERZ (#0001531).